@@ -1,5 +1,14 @@
 2025-12-29  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* chem.pl: Drop `copyright` scalar; see below.  Bump revision or
+	"micro" portion of version number.
+	(version): Stop reporting copyright and license notice
+	after version disclosure.  No other program groff installs, not
+	even others authored by Bernd Warken, handles `--version` in
+	this way, except for the namesake program groff(1) itself.
+
+2025-12-29  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* examples/122: Rename this directory...
 	* examples/cstr-122: ...to this.
 	* chem.am (chemexample122dir, EXTRA_DIST, install_chem_extra)
